[DSW-1748] Fix profile menu border overflow

--- a/engine-wizard/scss/_layout.scss
+++ b/engine-wizard/scss/_layout.scss
@@ -313,6 +313,7 @@ body {
 
                         &-last {
                             padding-bottom: 5px;
+                            @include border-radius-bottom($border-radius);
                         }
                     }
 
